<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_otp"
    tools:context=".Activities.OTPActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_code"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/seogue"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        >


        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="500dp"
            android:layout_marginTop="140dp"

            app:cardCornerRadius="20dp"

            >
            <ImageView
                android:contentDescription="@string/background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cardviewbackground"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmation"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/seogue"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#ECECEC"
                    android:fontFamily="@font/seogue"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:text="@string/please_type_the_verification_code_sent_to_your_mobile_number"
                    />

                <EditText
                    android:id="@+id/otpInput"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:maxLength="6"
                    android:importantForAutofill="yes"
                    android:inputType="number"
                    android:hint="@string/enter_otp"
                    android:textColorHint="#ECE8E8"
                    android:gravity="center"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_otp"
                    android:fontFamily="@font/seogue"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    />

                <Button
                    android:id="@+id/verifyButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/verify"
                    android:textStyle="bold"
                    android:background="@drawable/circular"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="120dp"
                    />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>